// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`postCard Snapshot > renders with complete post data correctly 1`] = `
<article class="
  gap-6
  grid
  grid-cols-1
  lg:grid-cols-12
  py-16
">
  <div class="lg:col-span-8">
    <a href="/posts/undefined/"><img
      alt="Test Title"
      class="
        h-64
        mb-6
        object-cover
        w-full
      "
      data-nuxt-img=""
      src="https://example.com/image.jpg"
      srcset="https://example.com/image.jpg 1x, https://example.com/image.jpg 2x"
    />
    <!-- Title -->
      <h2 class="
      font-extrabold
      hover:underline
      mb-4
      text-4xl
    ">Test Title</h2>
    </a>
    <p class="
      mb-4
      text-xl
    ">
      <span>
        This is a test excerpt for the post.
      </span>
    </p>
    <div class="mb-4">
      <span class="
        font-medium
        mr-1
        text-sm
      ">
        OCT 01 2022
      </span>
      <span>
        –
      </span>
      <span class="
        font-medium
        ml-1
        text-sm
      ">
        JOHN DOE
      </span>
    </div>
    <div class="
      flex
      flex-wrap
      gap-2
      mt-4
    ">
      <a
        class="
          bg-blue-50
          border
          border-blue-300
          dark:bg-blue-900/30
          dark:border-blue-700
          dark:hover:bg-blue-800/50
          dark:text-blue-300
          font-medium
          hover:bg-blue-100
          px-3
          py-1
          rounded-full
          text-blue-600
          text-sm
        "
        href="/posts/category/tech/"
      >Tech</a>
    </div>
  </div>
  <div class="
    lg:col-span-3
    lg:col-start-8
  ">
    <!-- Right column (30%) -->
  </div>
</article>
`;

exports[`postCard Snapshot > renders with custom title prop overriding display title correctly 1`] = `
<article class="
  gap-6
  grid
  grid-cols-1
  lg:grid-cols-12
  py-16
">
  <div class="lg:col-span-8">
    <a href="/posts/undefined/"><img
      alt="Custom Title"
      class="
        h-64
        mb-6
        object-cover
        w-full
      "
      data-nuxt-img=""
      src="https://example.com/image2.jpg"
      srcset="https://example.com/image2.jpg 1x, https://example.com/image2.jpg 2x"
    />
    <!-- Title -->
      <h2 class="
      font-extrabold
      hover:underline
      mb-4
      text-4xl
    ">Custom Title</h2>
    </a>
    <p class="
      mb-4
      text-xl
    ">
      <span>
        Post with custom title prop.
      </span>
    </p>
    <div class="mb-4">
      <span class="
        font-medium
        mr-1
        text-sm
      ">
        MAR 01 2023
      </span>
      <span>
        –
      </span>
      <span class="
        font-medium
        ml-1
        text-sm
      ">
        JANE DOE
      </span>
    </div>
    <div class="
      flex
      flex-wrap
      gap-2
      mt-4
    ">
      <a
        class="
          bg-blue-50
          border
          border-blue-300
          dark:bg-blue-900/30
          dark:border-blue-700
          dark:hover:bg-blue-800/50
          dark:text-blue-300
          font-medium
          hover:bg-blue-100
          px-3
          py-1
          rounded-full
          text-blue-600
          text-sm
        "
        href="/posts/category/news/"
      >News</a>
    </div>
  </div>
  <div class="
    lg:col-span-3
    lg:col-start-8
  ">
    <!-- Right column (30%) -->
  </div>
</article>
`;

exports[`postCard Snapshot > renders without featured image and author correctly 1`] = `
<article class="
  gap-6
  grid
  grid-cols-1
  lg:grid-cols-12
  py-16
">
  <div class="lg:col-span-8">
    <a href="/posts/undefined/">
      
    <!-- v-if -->
      
    <!-- Title -->
      <h2 class="
      font-extrabold
      hover:underline
      mb-4
      text-4xl
    ">No Image Post</h2>
    </a>
    <p class="
      mb-4
      text-xl
    ">
      <span>
        Post without featured image and author info.
      </span>
    </p>
    <!-- v-if -->
    <!-- v-if -->
  </div>
  <div class="
    lg:col-span-3
    lg:col-start-8
  ">
    <!-- Right column (30%) -->
  </div>
</article>
`;
